FixedScrollbarShow

--- a/mailchimpclient/src/index.css
+++ b/mailchimpclient/src/index.css
@@ -3,3 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+html {
+  overflow-y: scroll;
+  scrollbar-width: none;           /* Firefox */
+  -ms-overflow-style: none;        /* IE and Edge */
+}
+
+html::-webkit-scrollbar {
+  display: none;                   /* Chrome, Safari */
+}
